--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "devDependencies": {
     "@types/react": "16.0.38",
     "@types/react-dom": "^16.0.4",
-    "@types/webpack": "^3.8.8",
-    "awesome-typescript-loader": "^3.5.0",
+    "@types/webpack": "^4.1.3",
+    "awesome-typescript-loader": "^5.0.0-1",
     "babel-core": "^6.26.0",
     "babel-plugin-emotion": "^9.0.1",
     "compression": "^1.7.2",
-    "copy-webpack-plugin": "^4.4.2",
-    "html-webpack-plugin": "^2.30.1",
+    "copy-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^3.1.0",
+    "serve": "^6.5.3",
     "typescript": "^2.7.2",
     "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony-v2.8.22",
-    "uglifyjs-webpack-plugin": "^1.2.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.4",
